--- a/index.html
+++ b/index.html
@@ -137,10 +137,49 @@
                 <div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
-                    <h3>Phalakorn</h3>
+                    <h3>Girl</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+            </div>
+            <div class="testimonials-col">
+                <img src="img/eduford_img/user2.jpg">
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
+                    <h3>BOII</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
                 </div>
             </div>
         </div>
+
+    </section>
+
+    <!-- Call To Action -->
+
+    <section class="cta">
+        <h1>Enroll for our various online department <br>Anywhere From The World</h1>
+        <a href="" class="hero-btn">CONTACT US</a>
+    </section>
+
+    <!-- Footer -->
+
+    <section class="footer">
+        <h4>About Us</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
+        <div class="icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-line"></i>
+        </div>
+        <p>Made with <i class="fa-regular fa-heart"></i> By Wutipong Vww</p>
     </section>
 
 
