--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star-half-stroke"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
             </div>
         </div>
