--- a/blog.html
+++ b/blog.html
@@ -26,22 +26,59 @@
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>About Us</h1>
+        <h1>Certificate</h1>
 
     </section>
 
-    <!-- about us content -->
-
-    <section class="about-us">
+    <!-- blog page content -->
+    
+    <section class="blog-content">
         <div class="row">
-            <div class="about-col">
-                <h1>We are the world largest university</h1>
+            <div class="blog-left">
+                <img src="img/eduford_img/certificate.jpg">
+                <h2>Certificate</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
-                <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+                    Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
+
+
+                <div class="comment-box">
+                    <h3>Leave a comment</h3>
+                    <form class="comment-form">
+                        <input type="text" placeholder="Enter Name">
+                        <input type="email" placeholder="Enter Email">
+                        <textarea rows="5" placeholder="Your comment"></textarea>
+                        <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
+                    </form>
+                </div>
+
+
             </div>
-            <div class="about-col">
-                <img src="img/eduford_img/about.jpg">
+            <div class="blog-right">
+                <h3>Post Categories</h3>
+                <div>
+                    <span>Business Analytics</span>
+                    <span>21</span>
+                </div>
+                <div>
+                    <span>Business Analytics</span>
+                    <span>28</span>
+                </div>
+                <div>
+                    <span>Business Analytics</span>
+                    <span>29</span>
+                </div>
+                <div>
+                    <span>Business Analytics</span>
+                    <span>30</span>
+                </div>
+                <div>
+                    <span>Business Analytics</span>
+                    <span>20</span>
+                </div>
+                <div>
+                    <span>Business Analytics</span>
+                    <span>22</span>
+                </div>
             </div>
         </div>
     </section>
