--- a/about - Copy.html
+++ b/about - Copy.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="department.html">DEPARTMENT</a></li>
+                    <li><a href="department.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
