--- a/department.html
+++ b/department.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <section class="sub-header">
         <nav>
             <a href="index.html"><img src="img/eduford_img/logo.png"></a>
             <div class="nav-links" id="navLinks">
@@ -19,22 +19,19 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="department.html">COURSE</a></li>
-                    <li><a href="">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="department.html">DEPARTMENT</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
-
-        <div class="text-box">
-            <h1>Trat Technical College</h1>
-            <p>this is a paragraph of <br>Trat Technical College</p>
-            <a href="" class="hero-btn">Visit Us To know More!</a>
-        </div>
+        <h1>Departments</h1>
 
     </section>
 
+    <!-- department -->
+    
     <section class="department">
         <h1>Department We Offer</h1>
         <p>Test ๆ นี้คือคอร์สเรียน</p>
@@ -60,35 +57,6 @@
                     Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,
                     ut imperdiet sem scelerisque ut. In suscipit eros eu ipsum egestas,
                     posuere porta felis pellentesque. Fusce sit </p>
-            </div>
-        </div>
-    </section>
-
-    <section class="campus">
-        <h1>Our Global Campus</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,
-            ut imperdiet sem scelerisque ut. In suscipit eros eu ipsum egestas,
-            posuere porta felis pellentesque. Fusce sit </p>
-
-        <div class="row">
-            <div class="campus-col">
-                <img src="img/eduford_img/london.png">
-                <div class="layer">
-                    <h3>LONDON</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="img/eduford_img/newyork.png">
-                <div class="layer">
-                    <h3>NEW YORK</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="img/eduford_img/washington.png">
-                <div class="layer">
-                    <h3>WASHINGTON</h3>
-                </div>
             </div>
         </div>
     </section>
@@ -125,51 +93,7 @@
 
     </section>
 
-    <!-- testimonials -->
-
-    <section class="testimonials">
-        <h1>What Our Student Says</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-        <div class="row">
-            <div class="testimonials-col">
-                <img src="img/eduford_img/user1.jpg">
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
-                    <h3>Girl</h3>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-            </div>
-            <div class="testimonials-col">
-                <img src="img/eduford_img/user2.jpg">
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
-                    <h3>BOII</h3>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-            </div>
-        </div>
-
-    </section>
-
-    <!-- Call To Action -->
-
-    <section class="cta">
-        <h1>Enroll for our various online department <br>Anywhere From The World</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
-    </section>
-
-    <!-- Footer -->
+    <!-- footer -->
 
     <section class="footer">
         <h4>About Us</h4>
@@ -181,10 +105,6 @@
         </div>
         <p>Made with <i class="fa-regular fa-heart"></i> By Wutipong Vww</p>
     </section>
-
-
-
-
 
     <!-- JavaScript -->
     <script>
