--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="text-box">
             <h1>Trat Technical College</h1>
             <p>this is a paragraph of <br>Trat Technical College</p>
-            <a href="" class="hero-btn">Visit Us To know More!</a>
+            <a href="about.html" class="hero-btn">Visit Us To know More!</a>
         </div>
 
     </section>
