--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <section class="cta">
         <h1>Enroll for our various online department <br>Anywhere From The World</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
+        <a href="contact.html" class="hero-btn">CONTACT US</a>
     </section>
 
     <!-- Footer -->
@@ -177,7 +177,6 @@
             Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
         <div class="icons">
             <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-line"></i>
         </div>
         <p>Made with <i class="fa-regular fa-heart"></i> By Wutipong Vww</p>
     </section>
