--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 <h1>We are the world largest university</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
-                <a href="https://www.facebook.com/pages/%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B9%80%E0%B8%97%E0%B8%84%E0%B8%99%E0%B8%B4%E0%B8%84%E0%B8%95%E0%B8%A3%E0%B8%B2%E0%B8%94/128926960465117" class="hero-btn red-btn">EXPLORE NOW</a>
+                <a href="https://www.facebook.com/pages/%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B9%80%E0%B8%97%E0%B8%84%E0%B8%99%E0%B8%B4%E0%B8%84%E0%B8%95%E0%B8%A3%E0%B8%B2%E0%B8%94/128926960465117" target="_blank" class="hero-btn red-btn">EXPLORE NOW</a>
             </div>
             <div class="about-col">
                 <img src="img/eduford_img/about.jpg">
