--- a/about.html
+++ b/about.html
@@ -13,20 +13,20 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="img/eduford_img/logo.png"></a>
+            <a href="index.html"><img src="img/Trat Technical/logo.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="department.html">DEPARTMENT</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="index.html">หน้าหลัก</a></li>
+                    <li><a href="about.html">เกี่ยวกับ</a></li>
+                    <li><a href="course.html">แผนก</a></li>
+                    <li><a href="blog.html">เกียรติบัตร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>About Us</h1>
+        <h1>เกี่ยวกับ</h1>
 
     </section>
 
@@ -35,23 +35,72 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>We are the world largest university</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
-                <a href="https://www.facebook.com/pages/%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B9%80%E0%B8%97%E0%B8%84%E0%B8%99%E0%B8%B4%E0%B8%84%E0%B8%95%E0%B8%A3%E0%B8%B2%E0%B8%94/128926960465117" target="_blank" class="hero-btn red-btn">EXPLORE NOW</a>
+                <h1>เกี่ยวกับวิทยาลัยเรา</h1>
+                <p>เริ่มก่อตั้งเมื่อ ปี 2480 ใช้ชื่อ “โรงเรียนช่างไม้” ในเนื้อที่ของกรมการศาสนา วัดบุรินทร์(วัดร้าง)
+                    ประมาณ 6 ไร่เศษ โดยมี นายจิรภัทร สถาการ เป็น ครูใหญ่ ในสมัยนั้น ปีพุทธศักราช 2510
+                    โดยการใช้พื้นที่ของโรงเรียนการช่างสตรี ซึ่งถูกยุบรวมกับ โรงเรียนช่างไม้ ในเนื้อที่ 15 ไร่ 1 งาน 72
+                    ตารางวา อันเป็นที่ ตั้งของวิทยาลัยเทคนิคในปัจจุบัน
+                    <br><br>ปี พ.ศ. 2480 โรงเรียนช่างไม้ตราด
+                    <br>ปี พ.ศ. 2500 โรงเรียนการช่างตราด
+                    <br>ปี พ.ศ. 2510 รวมกับ โรงเรียนการช่างสตรีใช้ชื่อ โรงเรียนการช่างตราด
+                    <br>ปี พ.ศ. 2522 โรงเรียนเทคนิคตราด
+                    <br>ปี พ.ศ. 2525 ถึง ปัจจุบัน วิทยาลัยเทคนิคตราด
+                </p>
+                <a href="https://www.facebook.com/pages/%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B9%80%E0%B8%97%E0%B8%84%E0%B8%99%E0%B8%B4%E0%B8%84%E0%B8%95%E0%B8%A3%E0%B8%B2%E0%B8%94/128926960465117"
+                    target="_blank" class="hero-btn red-btn">หน้าเพจวิทยาลัย</a>
             </div>
             <div class="about-col">
-                <img src="img/eduford_img/about.jpg">
+                <img src="http://www.trattc.ac.th/assets/images/history.jpg">
             </div>
         </div>
+
+        <div class="row">
+            <div class="about-ceo-col">
+                <h1>ผู้อำนวยการ วิทยาลัยเทคนิคตราด</h1>
+                <p>นายจิรพงค์ ร่มเงิน แต่งตั้ง พ.ศ. 2562 - ปัจจุบัน</p>
+            </div>
+        </div>
+
+        <div class="about-ceo-img">
+            <img src="http://www.trattc.ac.th/uploads/staff/1664614084.png">
+        </div>
+
+        <div class="about-vision_mission">
+            <div class="about-vision">
+                <h1>วิสัยทัศน์</h1>
+                <p>มุ่งผลิตและส่งเสริมคุณภาพนักเรียน นักศึกษา ให้ความรู้ ความชำนาญ
+                    ทางวิชาการและวิชาชีพเพื่อสนองตอบความต้องการของชุมชนและสถานประกอบการ</p>
+            </div>
+            <div class="about-vision">
+                <h1>พันธกิจ</h1>
+                <p>เป็นสถานศึกษาที่มุ่งเน้นผลิตและพัฒนากำลังคนในระดับกึ่งฝีมือ ฝีมือเทคนิคและระดับเทคโนโลยี ให้ความรู้
+                    ความสามารถ มีความชำนาญทางวิชาชีพได้มาตรฐาน และมีคุณภาพ
+                    ซึ่งมีความพร้อมที่จะให้บริการวิชาชีพแก่ชุมชนและท้องถิ่นเพื่อพัฒนาเครือข่ายการเรียนรู้ทางวิชาชีพให้กว้างขวาง
+                    และหลากหลายรูปแบบตลอดจนสืบสาน อนุรักษณ์คุณธรรม วัฒนธรรม ประเพณี
+                    ภูมิปัญญาท้องถิ่นของไทยให้ยั่งยืนตลอดไป
+                </p>
+            </div>
+            <div class="about-vision">
+                <h1>ปรัชญา</h1>
+                <p>"ล้ำเลิศวิชาการ ชำนาญงานฝีมือ ยึดถือคุณธรรม"</p>
+            </div>
+            <div class="about-vision">
+                <h1>เอกลักษณ์วิทยาลัยเทคนิคตราด</h1>
+                <p>"ทักษะเลิศล้ำ นำวิชาการ บริการชุมชน"</p>
+            </div>
+            <div class="about-vision">
+                <h1>อัตลักษณ์วิทยาลัยเทคนิคตราด</h1>
+                <p>"เก่ง ดี มีจิตอาสา"</p>
+            </div>
+        </div>
+
     </section>
 
     <!-- footer -->
 
     <section class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
+        <p>เว็บไซต์นีมีเจตนาสร้างขึ้นเพื่อเอาไว้ใช้งานในสถานศึกษาเพียงเท่านั้น</p>
         <div class="icons">
             <i class="fa-brands fa-facebook"></i>
         </div>
