--- a/blog.html
+++ b/blog.html
@@ -13,20 +13,20 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="img/eduford_img/logo.png"></a>
+            <a href="index.html"><img src="img/Trat Technical/logo.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="department.html">DEPARTMENT</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="index.html">หน้าหลัก</a></li>
+                    <li><a href="about.html">เกี่ยวกับ</a></li>
+                    <li><a href="course.html">แผนก</a></li>
+                    <li><a href="blog.html">เกียรติบัตร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Certificate</h1>
+        <h1>เกียรติบัตร</h1>
 
     </section>
 
@@ -36,21 +36,9 @@
         <div class="row">
             <div class="blog-left">
                 <img src="img/eduford_img/certificate.jpg">
-                <h2>Certificate</h2>
+                <h2>เกียรติบัตร</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
-
-
-                <div class="comment-box">
-                    <h3>Leave a comment</h3>
-                    <form class="comment-form">
-                        <input type="text" placeholder="Enter Name">
-                        <input type="email" placeholder="Enter Email">
-                        <textarea rows="5" placeholder="Your comment"></textarea>
-                        <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
-                    </form>
-                </div>
-
 
             </div>
             <div class="blog-right">
@@ -87,8 +75,7 @@
 
     <section class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
+        <p>เว็บไซต์นีมีเจตนาสร้างขึ้นเพื่อเอาไว้ใช้งานในสถานศึกษาเพียงเท่านั้น</p>
         <div class="icons">
             <i class="fa-brands fa-facebook"></i>
         </div>
