--- a/contact.html
+++ b/contact.html
@@ -13,31 +13,36 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="img/eduford_img/logo.png"></a>
+            <a href="index.html"><img src="img/Trat Technical/logo.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="department.html">DEPARTMENT</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="index.html">หน้าหลัก</a></li>
+                    <li><a href="about.html">เกี่ยวกับ</a></li>
+                    <li><a href="course.html">แผนก</a></li>
+                    <li><a href="blog.html">เกียรติบัตร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Contact Us</h1>
+        <h1>ติดต่อเรา</h1>
 
     </section>
 
     <!-- content us -->
 
     <section class="location">
-
+        <h1>แผนที่ ที่ตั้งของวิทยาลัยเขต 1</h1>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15595.918755553485!2d102.51340882363075!3d12.249653661317094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310443a441d67977%3A0x1f7e9bcbbb73787c!2z4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4LmA4LiX4LiE4LiZ4Li04LiE4LiV4Lij4Liy4LiU!5e0!3m2!1sth!2sth!4v1674992602254!5m2!1sth!2sth"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
+        <h1>แผนที่ ที่ตั้งของวิทยาลัยเขต 2</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.284548114938!2d102.48294541460442!3d12.296614491301195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31044302f26a0c5b%3A0xcac807192dcf4a53!2z4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4LmA4LiX4LiE4LiZ4Li04LiE4LiV4Lij4Liy4LiUIOC5gOC4guC4lTI!5e0!3m2!1sth!2sth!4v1675066037282!5m2!1sth!2sth"
+         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </section>
 
@@ -86,9 +91,8 @@
     <!-- footer -->
 
     <section class="footer">
-        <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
+        <h4>เกี่ยวกับเรา</h4>
+        <p>เว็บไซต์นีมีเจตนาสร้างขึ้นเพื่อเอาไว้ใช้งานในสถานศึกษาเพียงเท่านั้น</p>
         <div class="icons">
             <i class="fa-brands fa-facebook"></i>
         </div>
