--- a/index.html
+++ b/index.html
@@ -13,81 +13,83 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="img/eduford_img/logo.png"></a>
+            <a href="index.html"><img src="img/Trat Technical/logo.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="department.html">DEPARTMENT</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="index.html">หน้าหลัก</a></li>
+                    <li><a href="about.html">เกี่ยวกับ</a></li>
+                    <li><a href="course.html">แผนก</a></li>
+                    <li><a href="blog.html">เกียรติบัตร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
 
         <div class="text-box">
-            <h1>Trat Technical College</h1>
-            <p>this is a paragraph of <br>Trat Technical College</p>
-            <a href="about.html" class="hero-btn">Visit Us To know More!</a>
+            <h1>วิทยาลัยเทคนิคตราด</h1>
+            <p>เว็บจำลองวิทยาลัยเทคนิคตราด <br>ยินดีต้อนรับ</p>
+            <a href="about.html" class="hero-btn">เกี่ยวกับ วิทยาลัย</a>
         </div>
 
     </section>
 
-    <section class="department">
-        <h1>Department We Offer</h1>
-        <p>Test ๆ นี้คือคอร์สเรียน</p>
+    <section class="course">
+        <h1>แผนกรับสมัคร</h1>
+        <p>แผนกที่เปิดรับสมัคร</p>
 
         <div class="row">
-            <div class="department-col">
-                <h3>Information Technology (IT)</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,
-                    ut imperdiet sem scelerisque ut. In suscipit eros eu ipsum egestas,
-                    posuere porta felis pellentesque. Fusce sit </p>
+            <div class="course-col">
+                <h3>ระดับ ปวช. สาขาวิชา</h3>
+                <p><i class="fa-regular fa-circle"></i> ช่างยนต์
+                    <br><i class="fa-regular fa-circle"></i> ช่างกลโรงงาน
+                    <br><i class="fa-regular fa-circle"></i> ช่างเชื่อมโลหะ
+                    <br><i class="fa-regular fa-circle"></i> ช่างไฟฟ้ากำลัง
+                    <br><i class="fa-regular fa-circle"></i> ช่างอิเล็กทรอนิกส์
+                    <br><i class="fa-regular fa-circle"></i> ช่างก่อสร้าง
+                    <br><i class="fa-regular fa-circle"></i> การบัญชี
+                    <br><i class="fa-regular fa-circle"></i> คอมพิวเตอร์ธุรกิจ
+                    <br><i class="fa-regular fa-circle"></i> การโรงแรม
+                    <br><i class="fa-regular fa-circle"></i> การท่องเที่ยว
+                    <br><i class="fa-regular fa-circle"></i> เทคโนโลยีสารสนเทศ
+                    <br><i class="fa-regular fa-circle"></i> โลจิสติกส์
+                </p>
             </div>
-            <div class="department-col">
-                <h3>Degree (IT)</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,
-                    ut imperdiet sem scelerisque ut. In suscipit eros eu ipsum egestas,
-                    posuere porta felis pellentesque. Fusce sit </p>
-            </div>
-            <div class="department-col">
-                <h3>Post Graduation (IT)</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,
-                    ut imperdiet sem scelerisque ut. In suscipit eros eu ipsum egestas,
-                    posuere porta felis pellentesque. Fusce sit </p>
+            <div class="course-col">
+                <h3>ระดับ ปวส. สาขาวิชา</h3>
+                <p><i class="fa-regular fa-circle"></i> เทคนิคเครื่องกล
+                    <br><i class="fa-regular fa-circle"></i> เทคนิคการผลิต
+                    <br><i class="fa-regular fa-circle"></i> เทคนิคโลหะ
+                    <br><i class="fa-regular fa-circle"></i> ไฟฟ้า
+                    <br><i class="fa-regular fa-circle"></i> อิเล็กทรอนิกส์
+                    <br><i class="fa-regular fa-circle"></i> ช่างก่อสร้าง
+                    <br><i class="fa-regular fa-circle"></i> การบัญชี
+                    <br><i class="fa-regular fa-circle"></i> การโรงแรม
+                    <br><i class="fa-regular fa-circle"></i> การท่องเที่ยว
+                    <br><i class="fa-regular fa-circle"></i> เทคโนโลยีธุรกิจดิจิทัล
+                    <br><i class="fa-regular fa-circle"></i> เทคโนโลยีสารสนเทศ
+                    <br><i class="fa-regular fa-circle"></i> การจัดการโลจิสติกส์และซัพพลายเชน
+                </p>
             </div>
         </div>
     </section>
 
     <section class="campus">
-        <h1>Our Global Campus</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,
-            ut imperdiet sem scelerisque ut. In suscipit eros eu ipsum egestas,
-            posuere porta felis pellentesque. Fusce sit </p>
+        <h1>เขตที่ตั้งของวิทยาลัย</h1>
+        <p>เขตที่ตั้งของวิทยาลัยเทคนิคตราดมีอยู่สองแห่ง ที่แรกคือเขต 2 เป็นเขตหลักของวิทยาลัย ตั้งใกล้กับอบจ.ตราด ที่ที่สองคือเขต 1 ตั้งอยู่ติดกับถนนเส้นท่าเรือจ้าง</p>
 
         <div class="row">
             <div class="campus-col">
                 <img src="img/eduford_img/london.png">
                 <div class="layer">
-                    <h3>LONDON</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="img/eduford_img/newyork.png">
-                <div class="layer">
-                    <h3>NEW YORK</h3>
+                    <a href="https://goo.gl/maps/ow1miV3d6rFcJxtS7" target="_blank"><h3>เขต 1</h3></a>
                 </div>
             </div>
             <div class="campus-col">
                 <img src="img/eduford_img/washington.png">
                 <div class="layer">
-                    <h3>WASHINGTON</h3>
+                    <a href="https://goo.gl/maps/fCNijeXMCyFyhdc18" target="_blank"><h3>เขต 2</h3></a>
                 </div>
             </div>
         </div>
@@ -96,30 +98,24 @@
     <!-- Facilities -->
 
     <section class="facilities">
-        <h1>Our Facilities</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,
-            ut imperdiet sem scelerisque ut. In suscipit eros eu ipsum egestas,
-            posuere porta felis pellentesque. Fusce sit </p>
+        <h1>สิ่งอำนวยความสะดวกต่างๆ ในวิทยาลัย</h1>
+        <p>สิ่งอำนวยความสะดวกที่มีให้ใช้ในวิทยาลัย ซึ่งเป็นพื้นฐานเพื่อพัฒนาคุณภาพชีวิตให้กับนักเรียนในวิทยาลัย</p>
 
         <div class="row">
             <div class="facilities-col">
                 <img src="img/eduford_img/library.png">
-                <h3>World Class library</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
+                <h3>ห้องสมุดไว้หาความรู้</h3>
+                <p>เรามีเขตห้องสมุดเพื่อเอาไว้ใช้หาความรู้ต่างๆ ทั้งความรู้ที่เกี่ยวข้องในโรงเรียน หรือหาความรู้รอบตัวต่างๆ รวมทั้งยังสามารถเอาไว้นั่งพักพ่อนได้</p>
             </div>
             <div class="facilities-col">
                 <img src="img/eduford_img/basketball.png">
-                <h3>Largest Play Ground</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
+                <h3>สนามบาสเกตบอล</h3>
+                <p>สนามบาสเกตบอลขนาดมาตรฐาน มีเอาสำหรับนักกีฬาบาสเกตบอล และเอาไว้สำหรับเล่นกีฬาอื่นๆ อีก</p>
             </div>
             <div class="facilities-col">
                 <img src="img/eduford_img/cafeteria.png">
-                <h3>Tasty and Healthy Food</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
+                <h3>โรงอาหารและคาเฟ่</h3>
+                <p>โรงอาหารที่มีอาหารชนิดต่างๆ วางขายอยู่ ไม่ว่าจะเป็นข้าว ก๋วยเตี๋ยว น้ำ ไส้กรอก และอื่นๆ รวมทั้งมีบริเวณร้านคาเฟ่ติดริมน้ำเอาไว้ให้นักเรียนไปใช้บริการ พร้อมทั้งสามารถนั่งพักพ่อนหย่อนใจได้</p>
             </div>
         </div>
 
@@ -128,16 +124,15 @@
     <!-- testimonials -->
 
     <section class="testimonials">
-        <h1>What Our Student Says</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h1>นักเรียนของเรามีความเห็นยังไง<br>เมื่อได้เรียนที่นี่?</h1>
+        <p>ความคิดเห็นต่างๆ ที่รวบรวมมาจากนักเรียนที่กำลังศึกษาอยู่ที่นี่</p>
 
         <div class="row">
             <div class="testimonials-col">
-                <img src="img/eduford_img/user1.jpg">
+                <img src="img/Trat Technical/user1.jpg">
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
-                    <h3>Girl</h3>
+                    <p>ดีทุกอย่างเลยยย~~</p>
+                    <h3>Phalakorn</h3>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -146,16 +141,30 @@
                 </div>
             </div>
             <div class="testimonials-col">
-                <img src="img/eduford_img/user2.jpg">
+                <img src="img/Trat Technical/user2.jpg">
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
-                    <h3>BOII</h3>
+                    <p>กีฬามีความหลากหลาย มีสนามเยอะ</p>
+                    <h3>Wutipong</h3>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="testimonials-col">
+                    <img src="img/Trat Technical/user3.jpg">
+                    <div>
+                        <p>ยินดีที่ได้เข้าเรียนที่นี้</p>
+                        <h3>Thanaphan</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -165,16 +174,15 @@
     <!-- Call To Action -->
 
     <section class="cta">
-        <h1>Enroll for our various online department <br>Anywhere From The World</h1>
-        <a href="contact.html" class="hero-btn">CONTACT US</a>
+        <h1>หากมีข้อสงสัยต่างๆ <br>สามารถสอบถามได้ผ่านช่องทางนี้</h1>
+        <a href="contact.html" class="hero-btn">ติดต่อเรา</a>
     </section>
 
     <!-- Footer -->
 
     <section class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec ac sapien vel neque viverra viverra. <br>Aenean blandit varius nibh,</p>
+        <p>เว็บไซต์นีมีเจตนาสร้างขึ้นเพื่อเอาไว้ใช้งานในสถานศึกษาเพียงเท่านั้น</p>
         <div class="icons">
             <i class="fa-brands fa-facebook"></i>
         </div>
