--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                     target="_blank" class="hero-btn red-btn">หน้าเพจวิทยาลัย</a>
             </div>
             <div class="about-col">
-                <img src="http://www.trattc.ac.th/assets/images/history.jpg">
+                <img src="img/Trat Technical/history.jpg">
             </div>
         </div>
 
@@ -62,7 +62,7 @@
         </div>
 
         <div class="about-ceo-img">
-            <img src="http://www.trattc.ac.th/uploads/staff/1664614084.png">
+            <img src="img/Trat Technical/ceo.png">
         </div>
 
         <div class="about-vision_mission">
