--- a/blog.html
+++ b/blog.html
@@ -31,13 +31,13 @@
                     <li><a href="index.html">หน้าหลัก</a></li>
                     <li><a href="about.html">เกี่ยวกับ</a></li>
                     <li><a href="course.html">แผนก</a></li>
-                    <li><a href="blog.html">เกียรติบัตร</a></li>
+                    <li><a href="blog.html">ใบประกาศนียบัตร</a></li>
                     <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>เกียรติบัตร</h1>
+        <h1>ใบประกาศ</h1>
 
     </section>
 
@@ -47,36 +47,16 @@
         <div class="row">
             <div class="blog-left">
                 <img src="img/eduford_img/certificate.jpg">
-                <h2>เกียรติบัตร</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Donec ac sapien vel neque viverra viverra. Aenean blandit varius nibh,</p>
+                <h2>ใบประกาศนียบัตร</h2>
+                <p>หรือใบประกาศ เป็นเอกสารที่แสดงถึงคุณวุฒิหรือวุฒิการศึกษามอบให้แก้ผู้ที่สำเร็จการศึกษาตามหลักสูตรที่กำหนด
+                    <br>- ซึ่งจะมอบให้ก็ต่อเมื่อศึกษาจบในสถานศึกษาตามหลักสูตรจนคครบกำหนด เช่น การจบการศึกษาระดับประกาศนียบัตร เป็นต้น
+                </p>
 
             </div>
             <div class="blog-right">
-                <h3>Post Categories</h3>
+                <h3>รายละเอียดของสิ่งที่จะได้รับ<br>เมื่อจบการศึกษาตามหลักสูตร</h3>
                 <div>
-                    <span>Business Analytics</span>
-                    <span>21</span>
-                </div>
-                <div>
-                    <span>Business Analytics</span>
-                    <span>28</span>
-                </div>
-                <div>
-                    <span>Business Analytics</span>
-                    <span>29</span>
-                </div>
-                <div>
-                    <span>Business Analytics</span>
-                    <span>30</span>
-                </div>
-                <div>
-                    <span>Business Analytics</span>
-                    <span>20</span>
-                </div>
-                <div>
-                    <span>Business Analytics</span>
-                    <span>22</span>
+                    <span>1. ใบประกาศนียบัตรหรือใบรับรองการจบการศึกษา</span>
                 </div>
             </div>
         </div>
