--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="index.html">หน้าหลัก</a></li>
                     <li><a href="about.html">เกี่ยวกับ</a></li>
                     <li><a href="course.html">แผนก</a></li>
-                    <li><a href="blog.html">เกียรติบัตร</a></li>
+                    <li><a href="blog.html">ใบประกาศนียบัตร</a></li>
                     <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
@@ -92,13 +92,13 @@
 
         <div class="row">
             <div class="campus-col">
-                <img src="img/eduford_img/london.png">
+                <img src="img/dec59-wt-trad-1.jpg">
                 <div class="layer">
                     <a href="https://goo.gl/maps/ow1miV3d6rFcJxtS7" target="_blank"><h3>เขต 1</h3></a>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="img/eduford_img/washington.png">
+                <img src="img/Technical 2.jpg">
                 <div class="layer">
                     <a href="https://goo.gl/maps/fCNijeXMCyFyhdc18" target="_blank"><h3>เขต 2</h3></a>
                 </div>
