--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                     <li><a href="index.html">หน้าหลัก</a></li>
                     <li><a href="about.html">เกี่ยวกับ</a></li>
                     <li><a href="course.html">แผนก</a></li>
-                    <li><a href="blog.html">เกียรติบัตร</a></li>
+                    <li><a href="blog.html">ใบประกาศนียบัตร</a></li>
                     <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
