--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
                 <ul>
                     <li><a href="index.html">หน้าหลัก</a></li>
                     <li><a href="about.html">เกี่ยวกับ</a></li>
-                    <li><a href="course.html">แผนก</a></li>
-                    <li><a href="blog.html">ใบประกาศนียบัตร</a></li>
+                    <li><a href="course.html">แผนกปวช.</a></li>
+                    <li><a href="course2.html">แผนกปวส.</a></li>
                     <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
@@ -78,7 +78,7 @@
                     <i class="fa-solid far fa-envelope"></i>
                     <span>
                         <h5>อีเมล</h5>
-                        <p>bigbosszaa086@gmail.com</p>
+                        <p>wutipong062303@gmail.com</p>
                     </span>
                 </div>
             </div>
