--- a/course2.html
+++ b/course2.html
@@ -44,24 +44,24 @@
     <!-- department -->
     
     <section class="course">
-        <h1>แผนกปวช.รับสมัคร</h1>
-        <p>แผนกปวช.ที่เปิดรับสมัคร</p>
+        <h1>แผนกปวส.รับสมัคร</h1>
+        <p>แผนกปวส.ที่เปิดรับสมัคร</p>
 
         <div class="row">
             <div class="course-col">
-                <h3>ระดับ ปวช. สาขาวิชา</h3>
-                <p><i class="fa-regular fa-circle"></i>  ช่างยนต์
-                    <br><i class="fa-regular fa-circle"></i>  ช่างกลโรงงาน 
-                    <br><i class="fa-regular fa-circle"></i>  ช่างเชื่อมโลหะ 
-                    <br><i class="fa-regular fa-circle"></i>  ช่างไฟฟ้ากำลัง 
-                    <br><i class="fa-regular fa-circle"></i>  ช่างอิเล็กทรอนิกส์ 
+                <h3>ระดับ ปวส. สาขาวิชา</h3>
+                <p><i class="fa-regular fa-circle"></i>  เทคนิคเครื่องกล
+                    <br><i class="fa-regular fa-circle"></i>  เทคนิคการผลิต
+                    <br><i class="fa-regular fa-circle"></i>  เทคนิคโลหะ
+                    <br><i class="fa-regular fa-circle"></i>  ไฟฟ้า
+                    <br><i class="fa-regular fa-circle"></i>  อิเล็กทรอนิกส์
                     <br><i class="fa-regular fa-circle"></i>  ช่างก่อสร้าง
                     <br><i class="fa-regular fa-circle"></i>  การบัญชี
-                    <br><i class="fa-regular fa-circle"></i>  คอมพิวเตอร์ธุรกิจ 
-                    <br><i class="fa-regular fa-circle"></i>  การโรงแรม 
-                    <br><i class="fa-regular fa-circle"></i>  การท่องเที่ยว 
-                    <br><i class="fa-regular fa-circle"></i>  เทคโนโลยีสารสนเทศ 
-                    <br><i class="fa-regular fa-circle"></i>  โลจิสติกส์
+                    <br><i class="fa-regular fa-circle"></i>  การโรงแรม
+                    <br><i class="fa-regular fa-circle"></i>  การท่องเที่ยว
+                    <br><i class="fa-regular fa-circle"></i>  เทคโนโลยีธุรกิจดิจิทัล
+                    <br><i class="fa-regular fa-circle"></i>  เทคโนโลยีสารสนเทศ
+                    <br><i class="fa-regular fa-circle"></i>  การจัดการโลจิสติกส์และซัพพลายเชน
                 </p>
             </div>
         </div>
