--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <ul>
                     <li><a href="index.html">หน้าหลัก</a></li>
                     <li><a href="about.html">เกี่ยวกับ</a></li>
-                    <li><a href="course.html">แผนก</a></li>
-                    <li><a href="blog.html">ใบประกาศนียบัตร</a></li>
+                    <li><a href="course.html">แผนกปวช.</a></li>
+                    <li><a href="course2.html">แผนกปวส.</a></li>
                     <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
@@ -154,7 +154,7 @@
             <div class="testimonials-col">
                 <img src="img/Trat Technical/user2.jpg">
                 <div>
-                    <p>กีฬามีความหลากหลาย มีสนามเยอะ</p>
+                    <p>กีฬามีความหลากหลาย ได้พบปะกับเพื่อนใหม่มากมายผ่านการเล่นกีฬา</p>
                     <h3>Wutipong</h3>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -168,11 +168,11 @@
                 <div class="testimonials-col">
                     <img src="img/Trat Technical/user3.jpg">
                     <div>
-                        <p>ยินดีที่ได้เข้าเรียนที่นี้</p>
+                        <p>ครูแผนกคอมพิวเตอร์ธุรกิจ(ผู้หญิง) สอนดีมากเลย สวย น่ารักด้วย มีกำลังใจเรียน</p>
                         <h3>Thanaphan</h3>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                     </div>
