--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
                 <ul>
                     <li><a href="index.html">หน้าหลัก</a></li>
                     <li><a href="about.html">เกี่ยวกับ</a></li>
-                    <li><a href="course.html">แผนก</a></li>
-                    <li><a href="blog.html">ใบประกาศนียบัตร</a></li>
+                    <li><a href="course.html">แผนกปวช.</a></li>
+                    <li><a href="course2.html">แผนกปวส.</a></li>
                     <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </div>
